clusters/apps/AI/web-ui/web-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  namespace: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web-ui
  template:
    metadata:
      labels:
        name: web-ui
    spec:
      containers:
      - env:
        - name: OLLAMA_API_BASE_URL
          value: "http://ollama:11434"
        name: web-ui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      nodeSelector:
        webui: deepseek
      volumes:
        - name: web-ui-claim0
          persistentVolumeClaim:
            claimName: web-ui-claim0
