clusters/apps/AI/web-ui/web-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  namespace: web-ui
spec:
  selector:
    name: web-ui
  ports:
  - port: 8080
    name: http
    targetPort: http
    protocol: TCP
