clusters/apps/AI/web-ui/web-ui-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web-ui
  name: web-ui-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`web-ui.local.wololoaeyoyo.com`)
      services:
        - name: web-ui 
          port: 8080
  tls:
    secretName: local-wololoaeyoyo-com-tls
